# RFC-Plugins

./: .gitignore  README.md  pyproject.toml  setup.py
climate_and_history/: cpc_outlooks.py
rfc_plugins/: _deps.py
rfc_plugins/additional_info/: __init__.py  hawaii_rfc_forecasts.py
rfc_plugins/climate/: __init__.py  cpc_outlooks.py
rfc_plugins/river/: __init__.py  flood_outlook_48hr.py  flood_outlook_5day.py  hefs_plots.py  mmefs_plots.py  river_streamflow.py  river_streamflow_map.py
rfc_plugins/seasonal/: __init__.py  breakup_dates_river_view.py  breakup_temperature_outlooks.py  historic_breakup_dates.py  ice_thickness.py  interactive_breakup_map.py  utilities.py  water_temperature.py
rfc_plugins/water_supply/: __init__.py  bradley_lake.py  nrcs_swe_data.py  nrcs_swe_map.py  nrcs_swe_timeseries.py  snow_depth_map.py  snow_depth_timeseries.py  utilities.py
rfc_plugins/weather/: __init__.py  accum_qpe_qpf_images.py  degree_days_map.py  degree_days_timeseries.py  freeze_level_maps.py  mrms.py  nbm_snow_level_forecast.py  ndfd.py  qpe_qpf.py  qpe_qpf_images.py  thawing_degree_days_map.py  thawing_degree_days_timeseries.py
seasonal_interest/: breakup_temperature_outlooks.py  utilities.py
weather_observations_and_forecasts/: __init__.py  radar.py  satellite.py  utilities.py  weather_forecasts.py
